--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2, server: 38.114.114.69, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-442.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2, server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-3.24MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇳🇱 荷兰-495.0KB/s(Youtube:不良林), server: 213.183.51.171, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 保加利亚-490.0KB/s(Youtube:不良林), server: 213.183.63.218, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-970.5KB/s(Youtube:不良林), server: 38.68.135.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-4.00MB/s(Youtube:不良林), server: hk45.swty.club, port: 12155, type: vmess, uuid: e152429a-8e95-4f53-bb88-e92a62682fcf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk45.swty.club}}
   - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-495.0KB/s(Youtube:不良林)
+      - 保加利亚-490.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-970.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
 rules:
